# GildedRose-Refactoring-Kata

TypeScript/app/: gilded-rose.ts
TypeScript/test/: golden-master-text-test.ts
TypeScript/test/jest/: gilded-rose.spec.ts
js-jest/: package-lock.json
python/: gilded_rose.py  items.py  pyproject.toml  test_gilded_rose.py  texttest_fixture.py
