[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["ambersariya <1080238+ambersariya@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
parameterized = "^0.8.1"
coverage = "^6.4.2"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
